--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,5 @@ include 'kodilla-patterns'
 include 'kodilla-jdbc'
 include 'kodilla-hibernate'
 include 'kodilla-spring'
+include 'kodilla-testing2'
 
